--- a/tarning2.html
+++ b/tarning2.html
@@ -5,6 +5,7 @@
     <script language="javascript" type="text/javascript" src="Script2.js"></script>
     <link href="Style2.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Raleway" rel="stylesheet">
+    <link rel="icon" href="d20-2699387_1920.png">
 </head>
 <body>
   
