--- a/tarning.html
+++ b/tarning.html
@@ -6,6 +6,7 @@
     <link href="Style.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Raleway" rel="stylesheet">
     <link rel="icon" href="d20-2699387_1920.png">
+    <link rel="shortcut icon" href="d20-2699387_1920.png">
 </head>
 <body>
   
