--- a/DevLog.html
+++ b/DevLog.html
@@ -5,6 +5,14 @@
   <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/c/cd/Panda_Dab.jpg">
 </head>
 <body>
+  <h1>V3.2.1</h1>
+  <div style="width:20%">
+   <p>
+    Jag fick disikurera en orre... det sög, men jag har uppdaterat okrash github så man kan ändra saker och rulla tränignar med tangentbordet. Så ma ändrar antal med 1-9 och 0. Sen kan du rulla med enter, q, w, e, r och t.
+    Sen finns det en patch notes knapp så det är ju nice ju. Svårt att få en lång text när man int gjort så mycket... Fuck orrar.  
+   </p>  
+  </div>  
+  
   <h1>8 Apr</h1>
   <div style="width:20%">
     <p>JAG GJORDE DET BOIS!</p>
