Update and rename DevLog.html to patchNotes.html

--- a/patchNotes.html
+++ b/patchNotes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML>
 <head>
-  <title>DevLogs</title>
+  <title>Patch Notes</title>
   <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/c/cd/Panda_Dab.jpg">
 </head>
 <body>
