--- a/tarning.html
+++ b/tarning.html
@@ -53,6 +53,7 @@
   <div id='change'>
     <button id='close' onclick='closeTheme()'>X</button>
     <a id='themeD' href='https://okrash0.github.io/DnD/tarning2.html'>Light Theme</a>
+    <a id='log' target='_blan' href='https://okrash0.github.io/DnD/patchNotes.html'>Patch <br> Notes</a>  
   </div>
 </body>
 </html>
