--- a/tarning2.html
+++ b/tarning2.html
@@ -53,6 +53,7 @@
   <div id='change'>
     <button id='close' onclick='closeTheme()'>X</button>
     <a id='theme' href='https://okrash0.github.io/DnD/tarning.html'>Dark Theme</a>
+    <a id='log' target='_blan' href='https://okrash0.github.io/DnD/patchNotes.html'>Patch <br> Notes</a>      
   </div>
   
 </body>
