--- a/patchNotes.html
+++ b/patchNotes.html
@@ -5,19 +5,24 @@
   <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/c/cd/Panda_Dab.jpg">
 </head>
 <body>
+<div style="width:20%">
+  <h1>V3.1.2</h1>
+  <p onclick='function(){alert('shift + å')}'>xDxDxDxDxDxDxD</p>
+  <p>
+    Liten uppdatering, du kan nu nolställa allt med mellanslag så där är ju nice. Det finns också råsa theme nu, men jag tänker inte säga hur man gör för att aktivera det lol Dx lemo. 
+  </p>
+  
   <h1>V3.2.1</h1>
-  <div style="width:20%">
+
    <p>8==========D</p>
    <p>
     Jag fick disikurera en orre... det sög, men jag har uppdaterat okrash github så man kan ändra saker och rulla tränignar med tangentbordet. Så ma ändrar antal med 1-9 och 0. Sen kan du rulla med enter, q, w, e, r och t.
     Sen finns det en patch notes knapp så det är ju nice ju. Svårt att få en lång text när man int gjort så mycket... Fuck orrar.  
    </p>  
-  </div>  
   
-  <h1>8 Apr</h1>
-  <div style="width:20%">
+    <h1>8 Apr</h1>
     <p>JAG GJORDE DET BOIS!</p>
     <p>När du rullar tränignen så ändrar den färg i en millisekund så att man ser när man rullar tärningen. Så nu finns det inget ni kan   klaga på längre efterasom att jag har gjort allt perfekt. JAg har också gjort att det blir regnebåge när du får 20 fast det var för   ett tag sen, det blir också röd text osm du slår en etta (lol). Fins inte så mycekt jag kan skriva om mer... antar att jag måste   göra fler uppdateringar så att jag kan skriva mer här... Jag borde plugga matte eller svenska eller kemi nu istället för att göra   sdethär men det är ju inte kul jue.</p>
-  </div>
+</div>
 </body>
 </HTML>
