--- a/patchNotes.html
+++ b/patchNotes.html
@@ -7,10 +7,15 @@
 <body>
 <div style="width:20%">
   <h1>V3.1.2</h1>
-  <p onclick='function(){alert('shift + å')}'>xDxDxDxDxDxDxD</p>
+  <p onclick='xd()'>xDxDxDxDxDxDxD</p>
   <p>
     Liten uppdatering, du kan nu nolställa allt med mellanslag så där är ju nice. Det finns också råsa theme nu, men jag tänker inte säga hur man gör för att aktivera det lol Dx lemo. 
   </p>
+  <script>
+    function xd(){
+    alert('shift + å);
+    }
+  </script>
   
   <h1>V3.2.1</h1>
 
