--- a/patchNotes.html
+++ b/patchNotes.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 <div style="width:20%">
+  <h1>v.3.2.1.2.1</h1>
+  <p>
+    Vi sa 9 en så kommer inte alla till 9. Lite dålig stil... Har inte uppdaterat okrash github men jag är klar med idrotten. kolkan är 9:17 och jacob och elmo är inte, jacob kom precis. Jävla elmo, vi kör igång utan abu. Lets a go (i luigis röst).
+  </p>  
+  
   <h1>V3.1.1.1</h1>
   <p>
   20 träningar, jävla roge.
