--- a/patchNotes.html
+++ b/patchNotes.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 <div style="width:20%">
+  <h1>v4.2</h1>
+  <p>
+    Istället för att plug biologi så uppdaterade jag okrash github, man mkan nu spela trex spelt. Jag borde plugga boplogi istället för att programera... Men så kan det gå, mitt highscore är 5*10^60 när jag fuskade, så det kanske inte gillas eller gills eller gils. Hur tänkte dom med provet, jävligt otydligt om vad man skulle plugga in extra mycket just nu singlar man bara slant om man pluggar på rätt saker... Det är inte så nice ju. Aja ska pöligga lite bio nu så jag int efår L,M,N,O,P, F. tyck shift ä för att öppna trexspelet.
+  </p>  
+  
   <h1>v.3.2.1.2.1</h1>
   <p>
     Vi sa 9 en så kommer inte alla till 9. Lite dålig stil... Har inte uppdaterat okrash github men jag är klar med idrotten. kolkan är 9:17 och jacob och elmo är inte, jacob kom precis. Jävla elmo, vi kör igång utan abu. Lets a go (i luigis röst).
