--- a/patchNotes.html
+++ b/patchNotes.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 <div style="width:20%">
+  <h1>v4.-4.2</1>
+  <p>
+    bagrund på trex spelet. DEt är allt... Dock så ska meol bara inte spela dndn med oss hela tiden. Vad har vi gjort för att förtja'nna detta? hej okrash jag kan vara dm.... vi har kört två gånger totalt med emol som dm... ftw (fuck teh wath). Bli ledsen i mitt öga när han gör så hela tiden. wet inte riktigt vad jag ska göra mer med okrash githun. Den är ganska perfekt just nu, så det är ju nice och inte nice. Matte prov på onsdag, norde plugga men jag orkar inte. Titta <code>här, colt va?</code>. Aja trevlig hälg <3. Ska bar sklriva lite till så det blor lite mer text xD. 
+  </p>  
+    
   <h1>v4.2</h1>
   <p>
     Istället för att plug biologi så uppdaterade jag okrash github, man mkan nu spela trex spelt. Jag borde plugga boplogi istället för att programera... Men så kan det gå, mitt highscore är 5*10^60 när jag fuskade, så det kanske inte gillas eller gills eller gils. Hur tänkte dom med provet, jävligt otydligt om vad man skulle plugga in extra mycket just nu singlar man bara slant om man pluggar på rätt saker... Det är inte så nice ju. Aja ska pöligga lite bio nu så jag int efår L,M,N,O,P, F. tyck shift ä för att öppna trexspelet.
