--- a/patchNotes.html
+++ b/patchNotes.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 <div style="width:20%">
+  <h1>v4.-10.1</h1>
+  <p>Igen updating men jag har ett pong spel. ni vet det här | . | oh så stubsar bollan bara på väggareana. man måste vara två, men jag brukar spela med mig själv.
+  </p>
+  <a href='https://okrash0.github.io/Pong/index.html'> klika här </a>
+  
   <h1>v4.-4.2</1>
   <p>
     bagrund på trex spelet. DEt är allt... Dock så ska meol bara inte spela dndn med oss hela tiden. Vad har vi gjort för att förtja'nna detta? hej okrash jag kan vara dm.... vi har kört två gånger totalt med emol som dm... ftw (fuck teh wath). Bli ledsen i mitt öga när han gör så hela tiden. wet inte riktigt vad jag ska göra mer med okrash githun. Den är ganska perfekt just nu, så det är ju nice och inte nice. Matte prov på onsdag, norde plugga men jag orkar inte. Titta <code>här, colt va?</code>. Aja trevlig hälg <3. Ska bar sklriva lite till så det blor lite mer text xD. 
