--- a/mush.html
+++ b/mush.html
@@ -5,7 +5,7 @@
   </head>
   <body>
   <script>
-  funciton o(){
+  function o(){
   var audio = new Audio('Mushroomparty2k18.mp3');
   audio.play();
   }
