--- a/patchNotes.html
+++ b/patchNotes.html
@@ -6,6 +6,11 @@
 </head>
 <body>
 <div style="width:20%">
+  <h1>10.1.2</h1>
+  <p>
+    Hej grappar nu har jag uppsdaaterat oksarsh github så nu kan ni spel <a href="https://okrash0.github.io/Snek/index.html">Snek</a> det är bara cklicka på lämken. Så igår så programerade jag snek och jag gjorde engenslaksan in lördags, sen så gjorder jag lite historia men jag var klar så jag gjorde inget. jag märkte oskå att emil inte äns hade börjagt med historian så jag är lite kuluven, för jag är klar min i9nte alla andra så jag vetinte. MEn jag gillade inte engelskan så det sög kommer antagligen få max E fasat inte betygsatt så aja. ha det bra allihopa grappar.  
+  </p>
+  
   <h1>v5.1.1</h1>
   <a href='https://okrash0.github.io/DnD/mush.html'>Maimaomaiama momaimomamima</a>
   <p>
