--- a/patchNotes.html
+++ b/patchNotes.html
@@ -6,6 +6,18 @@
 </head>
 <body>
 <div style="width:20%">
+  <h1>V31augusti</h1>
+  <p>  
+    HEj grappar eller bara Elin jag vet inte. Jag fick csn idag viket var fett nice så nu är jag rik igen vilket känns bra efter att ha varit fattig hela sopmmaren och så. Hoppas att allt är bra med er själv har jag varit fadder i en vecka nu så det är nice och kul nästan jämt jä.
+    Nu börjar föreläsningarna ppriktigt fast på zoom vilket är lite sämst men vafan vad ska man göra liksom det är bara att göra det liksom, eller hoppa av vilket är ett alternativ fast jag tänker nog inte göra det just nu.
+    Undrar om någon ens kommer läsa det här det är typ Elin för hon sa att on brukar kolla ibland så jag lär slå på stort nu så att hon inte blir besviken.
+    Vet inte riktigt vad jag ska skriva för jag har ingn uppdatering på dndn och det sista jag programerade var ett kanonprogram som simulerade en kanon som hade vind och grejer. 
+    Jag har inte klättrat så mycket som jag velat men snart hoppas jag att jag kommer igång igen med klättringen och att mitt finger är helt igen för det har det inte varit :( .
+    Tror det här är den längsta uppdateringen jag skrivit hittils så det är ju nice vet inte riktigt hur snabbt jag skriver... tror jag har blivit dålig på att skriva snabbt över sommaren, vänta ett tag ska kolla... ockej fick 62 ord per minut vilket är rätt bra för att vara jag.
+    Om någon läser det här så kan du gärna höra av dig så vet jag att du lästa. Hoppas du som kanske läser det här har det bra och är nöjd med vad du gör just nu men om du itne är det så har du fan hela livet på dig att bli nöjd. Och med hela livet menar jag såklart 23 för efter det är det bara utför.
+    Fatta att vara 23 och inte rest jorden runt volontärat i Burundi, köpt ett hus, pluggat klart, jobbat i 10 år, skaffat barn, festat så jävla hårt att du inte kommer ihåg en hel månad och gift dig. FAtta att inte gjort det när man är 23 LOL.
+    Aja kanske borde avsluta nu, eller inte. Tänk om någon som jag inte känner ser det här fatta vad konstigt, eller? Inte vet jag det kanske inte är så konstigt men jag tror det. Nu har jag typ skrivit 400 ord, ska vi satsa på 500? 
+    Nääääää, eller? ÄÄÄ nu ger jag mig. Tack och hej och ha det så bra. Vi kanske synns någon gång eller så är det här det sista du hör från mig någonsin. Sjuk värld vi lever i. 
   <h1>V10.1.2</h1>
   <p>
     Hej grappar nu har jag uppsdaaterat oksarsh github så nu kan ni spel <a href="https://okrash0.github.io/Snek/index.html">Snek</a> det är bara cklicka på lämken. Så igår så programerade jag snek och jag gjorde engenslaksan in lördags, sen så gjorder jag lite historia men jag var klar så jag gjorde inget. jag märkte oskå att emil inte äns hade börjagt med historian så jag är lite kuluven, för jag är klar min i9nte alla andra så jag vetinte. MEn jag gillade inte engelskan så det sög kommer antagligen få max E fasat inte betygsatt så aja. ha det bra allihopa grappar. Inann spelet börjar kan man trycka på 1,2 eller 3 för att ändra svårighet mellanslag för att pasa.
